// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaselineEngine updateResultsInPlace Scan with no violations when no baseline content exists 1`] = `
{
  "axeResults": {
    "violations": {},
  },
  "evaluation": {
    "fixedViolationsByRule": {},
    "newViolationsByRule": {},
    "suggestedBaselineUpdate": {
      "metadata": {
        "fileFormatVersion": "1",
      },
      "results": [],
    },
    "totalFixedViolations": 0,
    "totalNewViolations": 0,
  },
}
`;

exports[`BaselineEngine updateResultsInPlace Scan with violations when no baseline content exists 1`] = `
{
  "axeResults": {
    "violations": {
      "rule-1|<div id="some-id" />|#some-id": {
        "fingerprint": "rule-1|<div id="some-id" />|#some-id",
        "urlInfos": [
          {
            "baselineStatus": "new",
            "url": "url-1",
          },
          {
            "baselineStatus": "new",
            "url": "url-2",
          },
        ],
        "urls": [
          "url-1",
          "url-2",
        ],
      },
      "rule-2|<div id-"another-id" />|#another-id": {
        "fingerprint": "rule-2|<div id-"another-id" />|#another-id",
        "urlInfos": [
          {
            "baselineStatus": "new",
            "url": "url-2",
          },
        ],
        "urls": [
          "url-2",
        ],
      },
    },
  },
  "evaluation": {
    "fixedViolationsByRule": {},
    "newViolationsByRule": {
      "rule-1": 2,
      "rule-2": 1,
    },
    "suggestedBaselineUpdate": {
      "metadata": {
        "fileFormatVersion": "1",
      },
      "results": [
        {
          "cssSelector": "#some-id",
          "htmlSnippet": "<div id="some-id" />",
          "rule": "rule-1",
          "urls": [
            "url-1",
            "url-2",
          ],
        },
        {
          "cssSelector": "#another-id",
          "htmlSnippet": "<div id-"another-id" />",
          "rule": "rule-2",
          "urls": [
            "url-2",
          ],
        },
      ],
    },
    "totalFixedViolations": 0,
    "totalNewViolations": 3,
  },
}
`;

exports[`BaselineEngine updateResultsInPlace current scan content has complex differences compared to baseline content 1`] = `
{
  "axeResults": {
    "violations": {
      "rule-1|<div id="some-id" />|#some-id": {
        "fingerprint": "rule-1|<div id="some-id" />|#some-id",
        "urlInfos": [
          {
            "baselineStatus": "existing",
            "url": "url-1",
          },
          {
            "baselineStatus": "existing",
            "url": "url-2",
          },
          {
            "baselineStatus": "new",
            "url": "url-3",
          },
        ],
        "urls": [
          "url-1",
          "url-2",
          "url-3",
        ],
      },
      "rule-3|<div id-"yet-another-id" />|#yet-another-id": {
        "fingerprint": "rule-3|<div id-"yet-another-id" />|#yet-another-id",
        "urlInfos": [
          {
            "baselineStatus": "new",
            "url": "url-3",
          },
        ],
        "urls": [
          "url-3",
        ],
      },
    },
  },
  "evaluation": {
    "fixedViolationsByRule": {
      "rule-2": 1,
    },
    "newViolationsByRule": {
      "rule-1": 1,
      "rule-3": 1,
    },
    "suggestedBaselineUpdate": {
      "metadata": {
        "fileFormatVersion": "1",
      },
      "results": [
        {
          "cssSelector": "#some-id",
          "htmlSnippet": "<div id="some-id" />",
          "rule": "rule-1",
          "urls": [
            "url-1",
            "url-2",
            "url-3",
          ],
        },
        {
          "cssSelector": "#yet-another-id",
          "htmlSnippet": "<div id-"yet-another-id" />",
          "rule": "rule-3",
          "urls": [
            "url-3",
          ],
        },
      ],
    },
    "totalBaselineViolations": 3,
    "totalFixedViolations": 1,
    "totalNewViolations": 2,
  },
}
`;

exports[`BaselineEngine updateResultsInPlace current scan content has fewer errors than baseline content 1`] = `
{
  "axeResults": {
    "violations": {
      "rule-1|<div id="some-id" />|#some-id": {
        "fingerprint": "rule-1|<div id="some-id" />|#some-id",
        "urlInfos": [
          {
            "baselineStatus": "existing",
            "url": "url-1",
          },
        ],
        "urls": [
          "url-1",
        ],
      },
    },
  },
  "evaluation": {
    "fixedViolationsByRule": {
      "rule-1": 1,
      "rule-2": 1,
    },
    "newViolationsByRule": {},
    "suggestedBaselineUpdate": {
      "metadata": {
        "fileFormatVersion": "1",
      },
      "results": [
        {
          "cssSelector": "#some-id",
          "htmlSnippet": "<div id="some-id" />",
          "rule": "rule-1",
          "urls": [
            "url-1",
          ],
        },
      ],
    },
    "totalBaselineViolations": 3,
    "totalFixedViolations": 2,
    "totalNewViolations": 0,
  },
}
`;

exports[`BaselineEngine updateResultsInPlace current scan content has new failures before and after baseline content 1`] = `
{
  "axeResults": {
    "violations": {
      "rule-0|<div id="some-id-0" />|#some-id-0": {
        "fingerprint": "rule-0|<div id="some-id-0" />|#some-id-0",
        "urlInfos": [
          {
            "baselineStatus": "new",
            "url": "url-0",
          },
        ],
        "urls": [
          "url-0",
        ],
      },
      "rule-1|<div id="some-id" />|#some-id": {
        "fingerprint": "rule-1|<div id="some-id" />|#some-id",
        "urlInfos": [
          {
            "baselineStatus": "existing",
            "url": "url-1",
          },
        ],
        "urls": [
          "url-1",
        ],
      },
      "rule-2|<div id="some-id-2" />|#some-id-2": {
        "fingerprint": "rule-2|<div id="some-id-2" />|#some-id-2",
        "urlInfos": [
          {
            "baselineStatus": "new",
            "url": "url-2",
          },
        ],
        "urls": [
          "url-2",
        ],
      },
    },
  },
  "evaluation": {
    "fixedViolationsByRule": {},
    "newViolationsByRule": {
      "rule-0": 1,
      "rule-2": 1,
    },
    "suggestedBaselineUpdate": {
      "metadata": {
        "fileFormatVersion": "1",
      },
      "results": [
        {
          "cssSelector": "#some-id-0",
          "htmlSnippet": "<div id="some-id-0" />",
          "rule": "rule-0",
          "urls": [
            "url-0",
          ],
        },
        {
          "cssSelector": "#some-id",
          "htmlSnippet": "<div id="some-id" />",
          "rule": "rule-1",
          "urls": [
            "url-1",
          ],
        },
        {
          "cssSelector": "#some-id-2",
          "htmlSnippet": "<div id="some-id-2" />",
          "rule": "rule-2",
          "urls": [
            "url-2",
          ],
        },
      ],
    },
    "totalBaselineViolations": 1,
    "totalFixedViolations": 0,
    "totalNewViolations": 2,
  },
}
`;

exports[`BaselineEngine updateResultsInPlace current scan content is identical to baseline content 1`] = `
{
  "axeResults": {
    "violations": {
      "rule-1|<div id="some-id" />|#some-id": {
        "fingerprint": "rule-1|<div id="some-id" />|#some-id",
        "urlInfos": [
          {
            "baselineStatus": "existing",
            "url": "url-1",
          },
          {
            "baselineStatus": "existing",
            "url": "url-2",
          },
        ],
        "urls": [
          "url-1",
          "url-2",
        ],
      },
      "rule-2|<div id-"another-id" />|#another-id": {
        "fingerprint": "rule-2|<div id-"another-id" />|#another-id",
        "urlInfos": [
          {
            "baselineStatus": "existing",
            "url": "url-2",
          },
        ],
        "urls": [
          "url-2",
        ],
      },
    },
  },
  "evaluation": {
    "fixedViolationsByRule": {},
    "newViolationsByRule": {},
    "suggestedBaselineUpdate": null,
    "totalBaselineViolations": 3,
    "totalFixedViolations": 0,
    "totalNewViolations": 0,
  },
}
`;

exports[`BaselineEngine updateResultsInPlace current scan has more errors than baseline content 1`] = `
{
  "axeResults": {
    "violations": {
      "rule-1|<div id="some-id" />|#some-id": {
        "fingerprint": "rule-1|<div id="some-id" />|#some-id",
        "urlInfos": [
          {
            "baselineStatus": "existing",
            "url": "url-1",
          },
          {
            "baselineStatus": "new",
            "url": "url-2",
          },
        ],
        "urls": [
          "url-1",
          "url-2",
        ],
      },
      "rule-2|<div id-"another-id" />|#another-id": {
        "fingerprint": "rule-2|<div id-"another-id" />|#another-id",
        "urlInfos": [
          {
            "baselineStatus": "new",
            "url": "url-2",
          },
        ],
        "urls": [
          "url-2",
        ],
      },
    },
  },
  "evaluation": {
    "fixedViolationsByRule": {},
    "newViolationsByRule": {
      "rule-1": 1,
      "rule-2": 1,
    },
    "suggestedBaselineUpdate": {
      "metadata": {
        "fileFormatVersion": "1",
      },
      "results": [
        {
          "cssSelector": "#some-id",
          "htmlSnippet": "<div id="some-id" />",
          "rule": "rule-1",
          "urls": [
            "url-1",
            "url-2",
          ],
        },
        {
          "cssSelector": "#another-id",
          "htmlSnippet": "<div id-"another-id" />",
          "rule": "rule-2",
          "urls": [
            "url-2",
          ],
        },
      ],
    },
    "totalBaselineViolations": 1,
    "totalFixedViolations": 0,
    "totalNewViolations": 2,
  },
}
`;

exports[`BaselineEngine updateResultsInPlace reports a different output if the file format version changes 1`] = `
{
  "axeResults": {
    "violations": {},
  },
  "evaluation": {
    "fixedViolationsByRule": {},
    "newViolationsByRule": {},
    "suggestedBaselineUpdate": {
      "metadata": {
        "fileFormatVersion": "1.1",
      },
      "results": [],
    },
    "totalBaselineViolations": 0,
    "totalFixedViolations": 0,
    "totalNewViolations": 0,
  },
}
`;
